[package]
name = "anaglyph-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#anaglyph-rs = { git = "https://github.com/yossarianirving/anaglyph-rs.git", branch = "main" }
anaglyph-rs = { path = "../anaglyph-rs" }
image = "0.25.1"
wasm-bindgen = "0.2.92"

[lib]
crate-type = ["cdylib", "rlib"]